...
    <string name="app_name">Broachcutter Dealer</string>
    <string name="com.crashlytics.android.build_id">1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_label">Email</string>
    <string name="login_password_label">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_title">LOG IN</string>
    <string name="empty_username">Please enter a username.</string>
    <string name="empty_password">Please enter a password.</string>
    <string name="login_unknown_error">An unknown error occurred during login. Please try again.</string>
    <string name="broachcutter_title">BroachCutter</string>
    <string name="search_toolbar">Search</string>
...
    <string name="login_passwords_mismatch">The passwords entered don\'t seem to match!</string>
    <string name="unknown_error_try_again">Unknown error occurred, try again</string>
    <string name="enter_registered_email">Enter registered email</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="enter_valid_email">Please enter a valid email.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="login_auth_failure">Incorrect password, please try again.</string>
    <string name="unregistered_email">Email isn\'t registered, please check and try again.</string>
    <string name="accessories">Accessories</string>
    <string name="core_drill_cutters">Core Drill Cutters</string>
    <string name="magnetic_drilling_machines">Magnetic Drilling Machines</string>
    <string name="spares">Spares</string>
    <string name="what_are_you_looking_to_order">What are you looking to order?</string>
...
